测试redis
