# biz/router/test.go
@@ -9,6 +9,7 @@ import (
 func testRoutes(apiGroup *gin.RouterGroup) {
 	testGroup := apiGroup.Group("/test")
 	{
-		testGroup.GET("/redis", hTest.Redis)
+		testGroup.PUT("/redis/set", hTest.RedisSet)
+		testGroup.GET("/redis/get/:key", hTest.RedisGet)
 	}
 }
